[package]
name = "iota-streams-experiments"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.1" }
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", tag = "1.2.0" }
bee-message = "=0.1.5"
bee-rest-api = "=0.1.2"